--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,17 @@
-[tool.poetry]
+[project]
 name = "phzipcodes-web"
 version = "0.1.0"
-description = "Philippines Zip Codes Web Application"
-authors = ["Jayson <jsoncp@proton.me>"]
+description = "Philippines Zip Codes Lookup Portal"
+authors = [{ name = "Jayson", email = "jsoncp@proton.me" }]
 license = "MIT"
 readme = "README.md"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-phzipcodes = "^0.1.5"
-fastapi = "^0.115.4"
-jinja2 = "^3.1.4"
-uvicorn = "^0.32.0"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.7.2"
-mypy = "^1.13.0"
-pytest = "^8.3.3"
+requires-python = ">=3.13"
+dependencies = [
+    "fastapi>=0.115.6",
+    "jinja2>=3.1.5",
+    "phzipcodes>=0.1.6",
+    "pytest>=8.3.4",
+    "ruff>=0.8.4",
+    "uvicorn>=0.34.0",
+]
