--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.6",
     "jinja2>=3.1.5",
+    "mypy>=1.14.1",
     "phzipcodes>=0.1.6",
     "pytest>=8.3.4",
     "ruff>=0.8.4",
