--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,10 @@ dependencies = [
     "pytest>=8.3.4",
     "ruff>=0.8.4",
     "uvicorn>=0.34.0",
+    "pytest-asyncio>=0.23.5",
+    "pytest-playwright>=0.4.3",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+addopts = "-n auto"
